--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-NAME=khang
-Host=sql5.freesqldatabase.com
-Database_name=sql5437850
-Database_user=sql5437850
-Database_password=s4kBVISWFR
-Port_number=3306
+HOST="localhost"
+DBNAME="traluanvan"
+DBUSER=root
+DBPASS=""
+DBPORT=3306
