Fix: delete APP_KEY in file .env.example.
Contributors must add APP_KEY  by themself

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Traluanvan
 APP_ENV=local
-APP_KEY=base64:MnyH9WGMDGEsPfQ6kbya5fWDQjGe++ux0ItGicqegTg=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://traluanvan.local
 
