--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Traluanvan
+APP_NAME="Bach Khoa Thesis Management System"
 APP_ENV=local
 APP_KEY=
-APP_DEBUG=true
-APP_URL=http://traluanvan.local
+APP_DEBUG=false
+APP_URL=http://website-traluanvan.local/
 
 LOG_CHANNEL=stack
 
@@ -25,11 +25,11 @@ REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_PORT=465
+MAIL_USERNAME=3d6018827a259d
+MAIL_PASSWORD=0b30b3f3550624
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=khang.bui13032001@hcmut.edu.vn
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
