fix(email configure) use gmail

--- a/.env.example
+++ b/.env.example
@@ -24,10 +24,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=465
-MAIL_USERNAME=3d6018827a259d
-MAIL_PASSWORD=0b30b3f3550624
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=banhbeocodung00@gmail.com
+MAIL_PASSWORD=K7z2Lk7djSskNJZuxC3q
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=khang.bui13032001@hcmut.edu.vn
 MAIL_FROM_NAME="${APP_NAME}"
