--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME="Bach Khoa Thesis Management System"
 APP_ENV=local
-APP_KEY=
-APP_DEBUG=false
+APP_KEY=base64:pLFkYSgkgf21j66pYV3+MAjOo2NHEo0KgKEen9e+n3Q=
+APP_DEBUG=true
 APP_URL=http://website-traluanvan.local/
 
 LOG_CHANNEL=stack
@@ -15,7 +15,7 @@ DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -24,10 +24,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USERNAME=banhbeocodung00@gmail.com
-MAIL_PASSWORD=K7z2Lk7djSskNJZuxC3q
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=3d6018827a259d
+MAIL_PASSWORD=0b30b3f3550624
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=khang.bui13032001@hcmut.edu.vn
 MAIL_FROM_NAME="${APP_NAME}"
