--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME="Bach Khoa Thesis Management System"
 APP_ENV=local
-APP_KEY=base64:pLFkYSgkgf21j66pYV3+MAjOo2NHEo0KgKEen9e+n3Q=
+APP_KEY=
 APP_DEBUG=true
-APP_URL=http://website-traluanvan.local/
+APP_URL=
 
 LOG_CHANNEL=stack
 
@@ -24,12 +24,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=3d6018827a259d
-MAIL_PASSWORD=0b30b3f3550624
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=khang.bui13032001@hcmut.edu.vn
+MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
